gccida/c3/emit_swap_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1463:4: error: expected ';' after expression
rtx v26; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1463:5: error: use of undeclared identifier 'v26'
rtx v26; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1475:13: error: expected expression
v6 = ( rtx *)( FP_mode_reg + 136); 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1498:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( unsigned __int16 *)current_block->head[1]; 
                           ^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1499:14: error: expected expression
v12 = ( rtx *)insn[1]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1500:20: error: expected expression
if ( v12 != ( rtx *)v11 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1556:27: error: expected ')'
rtx = single_set_2( ( rtx)v12, v12[4]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1556:19: note: to match this '('
rtx = single_set_2( ( rtx)v12, v12[4]); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1579:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *v22), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1579:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *v22), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1581:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v21)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1592:1: error: use of undeclared identifier 'v26'
v26 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1603:15: error: expected expression
rtx = *( rtx *)( ( char *)&FP_mode_reg[rtwint[2] - 8][59 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1606:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1606:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1608:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v27))] 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1610:1: error: use of undeclared identifier 'v26'; did you mean 'v29'?
v26->fld[0].rtwint = ( __int64)rtx; 
^~~
v29
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1466:18: note: 'v29' declared here
 struct rtx_def *v29; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1617:30: error: expected ')'
if ( !find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1617:22: note: to match this '('
if ( !find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1626:28: error: expected ')'
&& !find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1626:20: note: to match this '('
&& !find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/reg-stack.c:1635:14: error: expected expression
v12 = ( rtx *)v12[2]; 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_swap_insn/src/obj/reg-stack.o] Error 1
